# Armstrong-Firmware

./: Armstrong-Firmware.ino  CMakeLists.txt
src/: ColorService.cpp  ColorService.h  JigHWTest.cpp  JigHWTest.h  SlotStorage.cpp  SlotStorage.h  State.cpp  State.h
src/State/: I2CState.cpp  I2CState.h  PlaybackState.cpp  PlaybackState.h  RecordState.cpp  RecordState.h  State.h
src/States/: I2CState.cpp  I2CState.h  PlaybackState.cpp  PlaybackState.h  RecordState.cpp  RecordState.h
src/Storage/: Storage.cpp  Storage.h
